# cfmpeg-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  api.rs  job.rs  main.rs  parser.rs  upload.rs
.github/workflows/: ci.yml  release-binaries.yml  release.yml
scripts/: build-helper-ffmpeg.sh  set-version.py
src/: api.rs  auth.rs  cli.rs  config.rs  download.rs  error.rs  fallback.rs  job.rs  main.rs  media_tools.rs  parser.rs  remote.rs  stream.rs  upload.rs
tests/: release_workflows.rs
