[package]
name = "cfmpeg"
version = "0.1.0"
edition = "2021"
description = "Cloud ffmpeg — run ffmpeg commands on powerful remote containers"
license = "MIT"
repository = "https://github.com/aarondfrancis/cfmpeg"
homepage = "https://cfmpeg.dev"
keywords = ["ffmpeg", "video", "encoding", "cloud"]
categories = ["command-line-utilities", "multimedia::video"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
console = "0.15"
sha2 = "0.10"
dirs = "5"
thiserror = "2"
futures = "0.3"
reqwest-eventsource = "0.6"
uuid = { version = "1", features = ["v4"] }
open = "5"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
