[package]
name = "cfmpeg"
version = "0.1.4"
edition = "2021"
description = "Cloud ffmpeg — run ffmpeg commands on powerful remote containers"
license = "MIT"
repository = "https://github.com/cfmpeg/cfmpeg-cli"
homepage = "https://cfmpeg.com"
keywords = ["ffmpeg", "video", "encoding", "cloud"]
categories = ["command-line-utilities", "multimedia::video"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.18"
console = "0.16"
dirs = "5"
thiserror = "2"
futures = "0.3"
reqwest-eventsource = "0.6"
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4"] }
open = "5"

[dev-dependencies]
flate2 = "1"
serde_yaml = "0.9"
tar = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
